// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render field types based on schema 1`] = `
<div
  class="grid grid"
>
  <div
    class="item gridItem size size-12 space-before-0 space-after-0"
  >
    <div
      class="field"
    >
      <label
        class="label"
      >
        Text
      </label>
      <input
        type="text"
      />
      <label
        class="errorLabel"
      />
    </div>
  </div>
  <div
    class="item gridItem size size-12 space-before-0 space-after-0"
  >
    <div
      class="field"
    >
      <label
        class="label"
      >
        Datetime
      </label>
      <input
        type="datetime"
      />
      <label
        class="errorLabel"
      />
    </div>
  </div>
</div>
`;

exports[`Should render nested sections 1`] = `
<div
  class="grid grid"
>
  <div
    class="section gridSection size size-12 space-before-0 space-after-0"
  >
    <div
      class="item size size-12 space-before-0 space-after-0"
    >
      <div
        class="divider"
      >
        Section 1
      </div>
    </div>
    <div
      class="item gridItem size size-12 space-before-0 space-after-0"
    >
      <div
        class="field"
      >
        <label
          class="label"
        >
          Item 1.1
        </label>
        <input
          type="text"
        />
        <label
          class="errorLabel"
        />
      </div>
    </div>
    <div
      class="section gridSection size size-12 space-before-0 space-after-0"
    >
      <div
        class="item size size-12 space-before-0 space-after-0"
      >
        <div
          class="divider"
        >
          Section 1.1
        </div>
      </div>
    </div>
  </div>
  <div
    class="section gridSection size size-12 space-before-0 space-after-0"
  >
    <div
      class="item size size-12 space-before-0 space-after-0"
    >
      <div
        class="divider"
      >
        Section 2
      </div>
    </div>
    <div
      class="item gridItem size size-12 space-before-0 space-after-0"
    >
      <div
        class="field"
      >
        <label
          class="label"
        >
          Item 2.1
        </label>
        <input
          type="text"
        />
        <label
          class="errorLabel"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Should render sections with size 1`] = `
<div
  class="grid grid"
>
  <div
    class="section gridSection size size-8 space-before-0 space-after-0"
  >
    <div
      class="item size size-12 space-before-0 space-after-0"
    >
      <div
        class="divider"
      >
        Section 1
      </div>
    </div>
    <div
      class="item gridItem size size-12 space-before-0 space-after-0"
    >
      <div
        class="field"
      >
        <label
          class="label"
        >
          Item 1.1
        </label>
        <input
          type="text"
        />
        <label
          class="errorLabel"
        />
      </div>
    </div>
  </div>
  <div
    class="section gridSection size size-4 space-before-0 space-after-0"
  >
    <div
      class="item size size-12 space-before-0 space-after-0"
    >
      <div
        class="divider"
      >
        Section 2
      </div>
    </div>
    <div
      class="item gridItem size size-12 space-before-0 space-after-0"
    >
      <div
        class="field"
      >
        <label
          class="label"
        >
          Item 2.1
        </label>
        <input
          type="text"
        />
        <label
          class="errorLabel"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Should render sections without label 1`] = `
<div
  class="grid grid"
>
  <div
    class="section gridSection size size-8 space-before-0 space-after-0"
  >
    <div
      class="item gridItem size size-12 space-before-0 space-after-0"
    >
      <div
        class="field"
      >
        <label
          class="label"
        >
          Item 1.1
        </label>
        <input
          type="text"
        />
        <label
          class="errorLabel"
        />
      </div>
    </div>
  </div>
  <div
    class="section gridSection size size-4 space-before-0 space-after-0"
  >
    <div
      class="item size size-12 space-before-0 space-after-0"
    >
      <div
        class="divider"
      >
        Section 2
      </div>
    </div>
    <div
      class="item gridItem size size-12 space-before-0 space-after-0"
    >
      <div
        class="field"
      >
        <label
          class="label"
        >
          Item 2.1
        </label>
        <input
          type="text"
        />
        <label
          class="errorLabel"
        />
      </div>
    </div>
  </div>
</div>
`;
